fix: awesomplete options hover bg in dark mode

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -184,6 +184,8 @@
 	--text-on-lightblue: var(--pacific-blue-600);
 	--text-on-light-gray: var(--gray-800);
 
+	--awesomplete-hover-bg: var(--control-bg);
+
 	// Other Colors
 	--sidebar-select-color: var(--gray-200);
 
