--- a/frappe/public/scss/desk/awesomebar.scss
+++ b/frappe/public/scss/desk/awesomebar.scss
@@ -53,7 +53,7 @@
 		}
 
 		&> li:hover, &> li[aria-selected=true] {
-			background-color: var(--control-bg);
+			background-color: var(--awesomplete-hover-bg);
 			color: var(--text-color);
 		}
 
